# PX4-Autopilot

ROMFS/px4fmu_common/init.d/: CMakeLists.txt  rc.boat_differential_apps  rc.boat_differential_defaults  rc.boat_vectorthrust_apps  rc.boat_vectorthrust_defaults  rc.vehicle_setup
boards/cubepilot/cubeorangeplus/: expect.px4board  warden.px4board
msg/: InputRc.msg
msg/versioned/: VehicleStatus.msg
src/drivers/uavcan/: CMakeLists.txt  Kconfig  battery_info.cpp  battery_info.hpp  uavcan_main.cpp  uavcan_main.hpp  uavcan_params.c
src/lib/: CMakeLists.txt
src/lib/boat_loiter/: BoatLoiter.cpp  BoatLoiter.hpp  CMakeLists.txt  boat_loiter_params.c
src/lib/events/: enums.json
src/lib/modes/: ui.hpp
src/lib/rover_control/: rovercontrol_params.c
src/lib/safe_mode/: CMakeLists.txt  SafeMode.cpp  SafeMode.hpp
src/modules/boat_differential/: BoatDifferential.cpp  BoatDifferential.hpp  CMakeLists.txt  Kconfig  module.yaml
src/modules/boat_differential/BoatDriveModes/BoatLoiterMode/: BoatLoiterMode.cpp  BoatLoiterMode.hpp  CMakeLists.txt
src/modules/boat_vectorthrust/: BoatVectorThrust.cpp  BoatVectorThrust.hpp  CMakeLists.txt  Kconfig  module.yaml
src/modules/boat_vectorthrust/VectorThrustDriveModes/VectorThrustLoiterMode/: CMakeLists.txt  VectorThrustLoiterMode.cpp  VectorThrustLoiterMode.hpp
src/modules/commander/: Commander.cpp  Commander.hpp  UserModeIntention.cpp  UserModeIntention.hpp  module.yaml  px4_custom_mode.h
src/modules/control_allocator/: ControlAllocator.cpp  ControlAllocator.hpp  module.yaml
src/modules/fw_autotune_attitude_control/: fw_autotune_attitude_control.cpp  fw_autotune_attitude_control.hpp
src/modules/mavlink/: mavlink_mission.cpp
(+64 files in other folders)
